# SixteenMITPython

./: .readme.py  README.md  hello.py  pyproject.toml
01/: e01_01.py  e01_02.py  e01_03.py  e01_04.py  e01_05.py
02/: e02_01.py  e02_01_.py  e02_02.py  e02_03.py  e02_04.py  e02_05.py
03/: Ivl.py  e03_01.py  e03_02.py  e03_03.py  e03_04.py  e03_05.py  e03_06.py  e03_07.py  e03_08.py
04/: alice_private_key.pem  alice_public_key.pem  bob_private_key.pem  bob_public_key.pem  cite.txt  e04_01.py  e04_02.py  e04_03.py  e04_04.py  e04_05.py  private_key.pem  public_key.pem
04/texts/: Tolstoy_Lev_Voyna_i_mir_3-4.txt  catch22.txt
05/: e05_01.py  e05_02.py  e05_03.py  e05_04.py  e05_05.py  e05_06.py
06/: e06_01.py  e06_02.py  e06_03.py  e06_04.py  e06_05.py  e06_06.py  e06_07.py
06/texts/: Tolstoy_Lev_Voyna_i_mir_1-2.txt
07/: affine.py  e07_01.py  e07_01_.py  e07_02.py  e07_03.py  e07_04.py  e07_05.py  e07_06.py  e07_07.py  e07_08.py  e07_09.py  equat.py
07/layouts/: e07_02.grid.json  e07_04.grid.json
08/: e08_01.py  e08_02.py  e08_03.py  e08_04.py
a02/: a02_01.py  a02_02.py  a02_03.py  a02_04.py  a02_05.py  a02_06.py  a02_07.py  a02_08.py  a02_09.py  a02_10.py  a02_11.html  a02_11.py  a02_12.py  a02_13.py  a02_14.html  a02_14.py  a02_15.py  a02_16.py  a02_17.py  a02_18.py  a02_19.py  a02_20.py  a02_21.py  a02_source_code.py  mebius.py  source_code.py  src.py  stat.py  thor.py  toc.py  toc.toml  toc_.toml  trefoil.py  visualize3d.py
a03/: a03_01.py
a04/: a04_01.py
a05/: a05_01.py  a05_02.py
a06/: a06_01.py  a06_02.py  a06_03.py  anim.py  anim_mo.py
(+2 files in other folders)
