[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.2",
    "fastapi>=0.118.3",
    "gif>=23.3.0",
    "jinja2>=3.1.6",
    "marimo[sql]>=0.16.5",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pooch>=1.8.2",
    "ruff>=0.14.0",
    "schemdraw>=0.21",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "stats>=0.1.2a0",
    "sympy>=1.14.0",
    "toml>=0.10.2",
    "typing>=3.10.0.0",
    "uncertainties>=3.2.3",
]
